--- a/public/config.json
+++ b/public/config.json
@@ -1,4 +1,4 @@
 {
-  "socket": "ws://192.168.31.64:3000/ws",
-  "apiURL": "http://192.168.31.64:3000"
+  "socket": "wss://ws.bocchi.ooo/ws",
+  "apiURL": "https://ws.bocchi.ooo"
 }
