--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "highcharts-vue": "^1.4.0",
     "moment": "^2.30.1",
     "sass": "^1.81.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.56.3",
